kubernetes/books/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: books
  labels:
    app: books

spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: books
          image: linuxserver/calibre-web:latest
          ports:
            - containerPort: 8083
              protocol: TCP
          volumeMounts:
            - mountPath: /books
              name: data-volume
            - mountPath: /config
              name: config-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: pvc-books-data
        - name: config-volume
          persistentVolumeClaim:
            claimName: pvc-books-config
