kubernetes/books/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: books
spec:
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  selector:
    app: books
