kubernetes/books/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: books-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`books.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: books
          port: 8083
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: books-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`books.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: books
          port: 8083
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
